--- a/src/css/style.css
+++ b/src/css/style.css
@@ -106,6 +106,11 @@ a:link, a:visited {
     padding-top: 1em;
 }
 
+#errorMsg {
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
 
 /* Import fonts */
 @font-face {
