--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,6 +23,9 @@ input {
     margin-bottom: 4em;
 }
 
+/* Need to move later */
+
+
 label {
     margin-right: 3em;
 }
@@ -32,6 +35,8 @@ label {
     /*border: 3px solid black;*/
     max-width: 50%;
 }
+
+
 
 /* Button CSS */
 button {
@@ -99,6 +104,54 @@ a:link, a:visited {
 }
 
 
+/* Navbar CSS */
+.nav-item {
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+.navbar {
+    justify-content: right;
+}
+
+
+/* Modal CSS */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+    background-color: #232B2B;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 120%; /* Could be more or less, depending on screen size */
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #DC3D24;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
 
 /* Small CSS changes */
 .pinTitle {
@@ -110,6 +163,47 @@ a:link, a:visited {
     margin-top: 5%;
     margin-bottom: 5%;
 }
+
+#deposit {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+#transfer {
+    margin-right: 0.25rem;
+    margin-left: 0.25rem;
+}
+
+#logout {
+    margin-left: 1.2rem;
+    margin-right: 1rem;
+}
+
+#overdraft {
+    margin-top: 6rem;
+}
+
+#transactionTitle {
+    margin-top: 2rem;
+    margin-right: 10rem;
+}
+
+#amount {
+    color: #DC3D24; /* Text color */
+    background-color: transparent; /* Remove background color */
+    border: 0;
+    border-bottom: 2px solid #DC3D24; /* Border thickness, line style, and color */
+    outline: 0;
+    width: 20%;
+    margin-right: 14rem;
+    margin-top: 1rem;
+}
+
+#submitTransaction {
+    margin-right: 9rem;
+}
+
+
 
 
 /* Import fonts */
